--- a/assets/styles/aboutUs.css
+++ b/assets/styles/aboutUs.css
@@ -11,7 +11,7 @@
     cursor: pointer;
 
     background: linear-gradient(89.93deg, #FF8008 -65.4%, #FFC837 99.88%, rgba(255, 255, 255, 0) 99.88%, #FFC837 99.88%);
-    filter: drop-shadow(0px 0px 15px rgba(142, 142, 142, 0.56));
+    filter: drop-shadow(0px 0px 7px rgba(142, 142, 142, 0.2));
 }
 
 .section__about-us {
@@ -27,10 +27,10 @@
 
 .background-curtain {
     position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
+    width: 101%;
+    height: 101%;
+    top: -1px;
+    left: -1px;
     background: white;
     z-index: -1;
     opacity: 1;
