--- a/assets/styles/portfolio.css
+++ b/assets/styles/portfolio.css
@@ -9,6 +9,7 @@
 
 .page__description__text {
     text-transform: lowercase;
+    text-align: center;
 }
 
 .page__description__left {
@@ -17,9 +18,13 @@
     margin-bottom: 20px;
 }
 
+.portfolio__image {
+    object-fit: cover;
+}
+
 .page__description__hexagon {
     width: 130px;
-    height: 140px;
+    height: 120px;
     background: var(--main-bg-gradient);
     transform: rotate(90deg);
 }
