--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -221,7 +221,6 @@ a:hover {
 }
 
 .hexagon__shadow:hover > .hexagon__button:before {
-    /*background: transparent;*/
     background: var(--main-bg-gradient);
 }
 
@@ -231,7 +230,7 @@ a:hover {
 }
 
 .hexagon__shadow:not(.send-contact__input):hover {
-    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.25));
+    filter: drop-shadow(0px 0px 4px rgba(131, 131, 131, 0.8));
 }
 
 .hexagon__button.start-project, .hexagon__button.telegram {
@@ -267,7 +266,7 @@ a:hover {
 }
 
 .top__section-left {
-    padding-top: 150px;
+    padding-top: 110px;
 }
 
 .main__title {
@@ -302,6 +301,13 @@ a:hover {
 }
 
 .box__send-contact__input {
+    width: 100%;
+    height: 100%;
+    font-family: MontserratRegular, sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 15px;
+    color: #000000;
     flex: auto;
     border: none;
     outline: none;
@@ -309,6 +315,19 @@ a:hover {
 
     -webkit-clip-path: polygon(100% 0%, 100% 50%, 100% 100%, 25px 100%, 0% 50%, 25px 0%);
     clip-path: polygon(100% 0%, 100% 50%, 100% 100%, 25px 100%, 0% 50%, 25px 0%);
+}
+
+::placeholder {
+    color: rgba(0, 0, 0, 0.3);
+    opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: rgba(0, 0, 0, 0.3);
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+    color: rgba(0, 0, 0, 0.3);
 }
 
 .box__send-contact__btn {
@@ -334,16 +353,6 @@ a:hover {
 
 .send-contact__input {
     flex: auto;
-}
-
-.box__send-contact__input {
-    width: 100%;
-    height: 100%;
-    font-family: MontserratRegular, sans-serif;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 15px;
-    color: rgba(0, 0, 0, 0.45);
 }
 
 .top__video__close {
@@ -568,7 +577,7 @@ a:hover {
     margin: 0 auto;
     margin-bottom: 30px;
     font-family: Montserrat, sans-serif;
-    font-size: 1.1em;
+    font-size: 20px;
     line-height: 24px;
     text-align: center;
     letter-spacing: 0.04em;
@@ -654,7 +663,6 @@ a:hover {
 }
 
 .portfolio__about__subtitle {
-    margin-top: 20px;
     font-size: 1.2em;
     line-height: 31px;
 }
@@ -758,6 +766,8 @@ a:hover {
     padding-left: 10px;
     margin-bottom: 21px;
     text-align: left;
+    font-size: 17px;
+    font-family: "Montserrat", sans-serif;
 }
 
 .section__pricing__offer:before {
@@ -1130,6 +1140,10 @@ a:hover {
 
     background: #FFFFFF;
     box-shadow: 0 0 9px rgba(0, 0, 0, 0.25);
+}
+
+.create__plan__row .hexagon__button:before {
+    background: var(--main-bg-gradient);
 }
 
 .create__plan__row__text {
