--- a/assets/styles/media.css
+++ b/assets/styles/media.css
@@ -7,7 +7,7 @@
 
 @media screen and (min-width: 1140px) {
     .section__pricing__plan__header {
-        font-size: 2.8em;
+        font-size: 30px;
     }
 
     .section__pricing__plan__footer {
