--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -385,7 +385,7 @@ a:hover {
 
 .full__screen {
     position: absolute;
-    top: 50px;
+    top: 44px;
     right: 0;
     z-index: 5;
     filter: url(#round);
@@ -498,6 +498,15 @@ a:hover {
 
 .section__services__item:hover .service__hexagon__title {
     color: #FFC523;
+}
+
+.section__services__item:hover .service__hexagon__icon.hover {
+    display: block;
+}
+
+.section__services__item:hover .default,
+.service__hexagon__icon.hover {
+    display: none;
 }
 
 .section__services__item:hover .service__hexagon {
@@ -618,10 +627,12 @@ a:hover {
 }
 
 .portfolio {
+    height: 300px;
     max-width: 415px;
     margin-bottom: 20px;
     position: relative;
     cursor: pointer;
+    overflow: hidden;
 }
 
 .portfolio:hover > .portfolio__about {
@@ -630,6 +641,8 @@ a:hover {
 
 .portfolio__image {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .portfolio__about {
@@ -981,6 +994,7 @@ a:hover {
     margin-top: 80px;
     position: relative;
     z-index: 8;
+    overflow: hidden;
 }
 
 .footer__content {
@@ -1007,7 +1021,6 @@ a:hover {
 }
 
 .footer__block__list__item {
-    padding-left: 25px;
     margin-bottom: 18px;
     color: #ffffff;
     font-family: Montserrat, sans-serif;
@@ -1035,6 +1048,10 @@ a:hover {
     position: absolute;
     left: 0;
     text-align: center;
+}
+
+.footer__services > .footer__block__list__item {
+    padding-left: 25px;
 }
 
 .contacts > .footer__block__list__item {
