--- a/assets/styles/media.css
+++ b/assets/styles/media.css
@@ -137,6 +137,33 @@
     .menu > li:not(:last-child) {
         padding-right: 20px;
     }
+
+    .close-service {
+        display: inline-block;
+    }
+
+    .section__services__item.active + .section__services__item-turned {
+        z-index: 5;
+        opacity: 1;
+        background: #ffffff;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .section__services__item.active {
+        transform: rotateY(180deg);
+    }
+
+    .section__services__item.active + .section__services__item-turned {
+        z-index: 5;
+        opacity: 1;
+        background: #ffffff;
+    }
+
+    .section__services__item-turned {
+        height: 94%;
+        transition: all .8s cubic-bezier(0.54, 0.53, 0.54, 0.54);
+    }
 }
 
 @media screen and (min-width: 992px) {
