--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -756,6 +756,7 @@ a:hover {
     letter-spacing: 0.04em;
     text-transform: uppercase;
     cursor: pointer;
+    color: black;
 }
 
 .section__pricing {
