--- a/assets/styles/aboutUs.css
+++ b/assets/styles/aboutUs.css
@@ -9,6 +9,7 @@
     text-align: left;
     height: 348px;
     cursor: pointer;
+    position: relative;
 
     background: linear-gradient(89.93deg, #FF8008 -65.4%, #FFC837 99.88%, rgba(255, 255, 255, 0) 99.88%, #FFC837 99.88%);
     filter: drop-shadow(0px 0px 7px rgba(142, 142, 142, 0.2));
@@ -80,9 +81,6 @@
     height: 100%;
     object-fit: cover;
     transform: rotate(-180deg);
-    position: absolute;
-    bottom: 0;
-
     -webkit-clip-path: polygon(50% 4%, 96% 27%, 96% 73%, 50% 96%, 4% 73%, 4% 27%);
     clip-path: polygon(50% 4%, 96% 27%, 96% 73%, 50% 96%, 4% 73%, 4% 27%);
 }
