--- a/assets/styles/project-inner.css
+++ b/assets/styles/project-inner.css
@@ -49,3 +49,8 @@
     color: #ffffff;
     font-weight: bold;
 }
+
+.nav__menu {
+    background: #ffffff;
+    box-shadow: 0 0 10px rgb(0 0 0 / 25%);
+}
