--- a/assets/styles/blog.css
+++ b/assets/styles/blog.css
@@ -77,3 +77,8 @@
     top: 50%;
     transform: translate(-50%, -50%);
 }
+
+.nav__menu {
+    background: #ffffff;
+    box-shadow: 0 0 10px rgb(0 0 0 / 25%);
+}
