--- a/assets/styles/about-project.css
+++ b/assets/styles/about-project.css
@@ -122,3 +122,7 @@ textarea.project__details {
 .upload-file {
     display: none;
 }
+.nav__menu {
+    background: #ffffff;
+    box-shadow: 0 0 10px rgb(0 0 0 / 25%);
+}
